--- a/app.css
+++ b/app.css
@@ -1,37 +1,3 @@
-/* #map-canvas {
-  height: 100%;
-  position: absolute; 
-  top: 0; 
-  bottom: -200px; 
-  left: 0; 
-  right: 0; 
-  z-index: 0;
-}
-
-#container {
-  z-index: 100;
-  position: relative;
-} */
-
-#gmap {
-  height: 100%;
-  width: 100%;
-  position: absolute; 
-  top: 0; 
-  bottom: -200px; 
-  left: 0; 
-  right: 0; 
-  z-index: 0;}
-
-.overlap{
-  z-index:2;
-  height: 100%;
-  width: 100%;
-  position: static; 
-
-
-}
-
 ul {
   list-style-type: none;
   font-size: 12px
@@ -40,6 +6,34 @@ ul {
 p {
   list-style-type: none;
   font-size: 12px
+}
+
+#gmap {
+  height: 100%;
+  width: 100%;
+  position: absolute; 
+  top: 0; 
+  bottom: 0px; 
+  left: 0; 
+  right: 0; 
+  z-index: -5;
+}
+
+.overlap{
+  z-index:1;
+  height: 100%;
+  width: 100%;
+  position: static; 
+
+
+}
+
+
+
+.modal { 
+  opacity: 0.93;
+  z-index: 2;
+
 }
 
 .card { 
@@ -53,3 +47,4 @@ p {
 .img { 
   opacity: 1.0;
 }
+
