--- a/resources/style.css
+++ b/resources/style.css
@@ -9,6 +9,13 @@ body {
   color: rgb(255, 255, 255);
 }
 
+#searchBar {
+  padding-right: 25px;
+}
+
+b {
+  font-size: 36px;
+}
 .split {
   height: 100%;
   width: 50%;
@@ -23,14 +30,16 @@ body {
   left: 0;
   background-color: black;
   overflow:hidden;
-
 }
 
 .right {
   right: 0;
   background-color: black;
   padding: 0px;
+}
 
+#additionalDiv {
+  display: none;
 }
 
 #additionalDiv {
@@ -43,7 +52,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  }
+}
 
 .centered {
   position: absolute;
@@ -59,6 +68,7 @@ body {
 	padding-top: 25px;
 	height: 0;
 }
+
 .videoWrapper iframe {
 	position: absolute;
 	top: 0;
@@ -73,25 +83,11 @@ body {
 	left: 0;
 	width: 100%;
   height: 100%;
-
 }
-
-/* bw */
-.map {
-  -webkit-filter: grayscale(10%);
-  -moz-filter: grayscale(100%);
-  -ms-filter: grayscale(100%);
-  -o-filter: grayscale(100%);
-   filter: grayscale(100%);
-
-}
-
-
 
 /* card opacity */
 .card-img-top {
   opacity: .4;
-
 }
 
 #map_canvas {
